--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "finestbackend",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dummy.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js"
+    "test": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.8.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb": "^4.13.0",
+    "mongoose": "^6.8.1",
     "nodemon": "^2.0.20"
   }
 }
