--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "server",
+  "name": "finestbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dummy.js",
   "scripts": {
-    "test": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.13.0",
-    "mongoose": "^6.8.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
